quick fix for overlapping grey lines in home timeline

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -683,7 +683,7 @@ span.fa.timeline { position: relative; padding: 2px 0 0 4px; font-size: 18px; di
 .timeline .item .activity-icon { width: 14%; color: #000; height: 100%; position: relative; float: left; background: 0;}
                 .item-activity { width: 35px; height:35px; border-radius: 100px; display: block; color: #fff; display: -webkit-flex;  display: flex; }
                 .item-activity span { -webkit-align-self: center;    align-self: center; width: 100%; margin:0 auto; text-align:center; font-size: 16px;}
-                .activity-icon:after { position: absolute; content: ""; border: 1px solid #c9c9c9; height: 100%; left:16.6px; z-index: -1;}
+                .activity-icon:after { position: absolute; content: ""; border: 1px solid #c9c9c9; height: 44%; left:16.6px; z-index: -1;}
 .timeline .item .desc { width: 64%; color: #0a3656; float: left;  }
 .timeline .item .desc h3 {margin: 0; padding: 2px 0 0 ; width: 100%;  }
 .timeline .item .desc p { float: left; width: 100%; color: #0a3656 }
